--- a/resources/filter.qrc
+++ b/resources/filter.qrc
@@ -1,6 +1,8 @@
-<!DOCTYPE RCC>
-<RCC version="1.0">
-    <qresource prefix="icons">
-        <file alias="filter.png">filter.png</file>
-    </qresource>
+<RCC>
+  <qresource prefix="icons">
+    <file alias="filter.png">filter.png</file>
+  </qresource>
+  <qresource prefix="logo">
+    <file>logomsi.png</file>
+  </qresource>
 </RCC>
