Refactoring screens and adding screenshots

--- a/ui/main.ui
+++ b/ui/main.ui
@@ -449,7 +449,7 @@ font: 75 12pt &quot;Arial Narrow&quot;;</string>
     <widget class="QWidget" name="gridLayoutWidget">
      <property name="geometry">
       <rect>
-       <x>880</x>
+       <x>520</x>
        <y>80</y>
        <width>191</width>
        <height>31</height>
@@ -506,7 +506,7 @@ font: 75 12pt &quot;Arial Narrow&quot;;</string>
     <widget class="QLabel" name="labelChart">
      <property name="geometry">
       <rect>
-       <x>880</x>
+       <x>520</x>
        <y>50</y>
        <width>151</width>
        <height>21</height>
@@ -522,7 +522,7 @@ font: 75 12pt &quot;Arial Narrow&quot;;</string>
     <widget class="QWidget" name="gridLayoutWidget_2">
      <property name="geometry">
       <rect>
-       <x>880</x>
+       <x>520</x>
        <y>110</y>
        <width>191</width>
        <height>141</height>
@@ -556,17 +556,17 @@ font: 75 12pt &quot;Arial Narrow&quot;;</string>
         </item>
         <item>
          <property name="text">
+          <string>FARM 6</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
           <string>AGRIMAQ 3</string>
          </property>
         </item>
         <item>
          <property name="text">
           <string>KW 325</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>FARM 6</string>
          </property>
         </item>
         <item>
@@ -588,7 +588,7 @@ font: 75 12pt &quot;Arial Narrow&quot;;</string>
 font: 75 12pt &quot;Arial Narrow&quot;;</string>
         </property>
         <property name="specialValueText">
-         <string/>
+         <string>Temperatura minima</string>
         </property>
        </widget>
       </item>
@@ -658,7 +658,7 @@ font: 75 12pt &quot;Arial Narrow&quot;;</string>
      </property>
      <property name="geometry">
       <rect>
-       <x>175</x>
+       <x>130</x>
        <y>170</y>
        <width>111</width>
        <height>28</height>
@@ -680,7 +680,7 @@ background-color: rgb(255, 255, 255);</string>
       <rect>
        <x>43</x>
        <y>170</y>
-       <width>111</width>
+       <width>75</width>
        <height>28</height>
       </rect>
      </property>
@@ -700,7 +700,7 @@ background-color: rgb(255, 255, 255);</string>
       <rect>
        <x>43</x>
        <y>210</y>
-       <width>111</width>
+       <width>75</width>
        <height>28</height>
       </rect>
      </property>
@@ -712,39 +712,80 @@ background-color: rgb(255, 255, 255);</string>
       <string>Limpiar filtro</string>
      </property>
     </widget>
-    <widget class="QLabel" name="labelTempMin">
+    <widget class="QWidget" name="gridLayoutWidget_3">
      <property name="geometry">
       <rect>
-       <x>730</x>
-       <y>150</y>
-       <width>141</width>
-       <height>23</height>
+       <x>1060</x>
+       <y>180</y>
+       <width>181</width>
+       <height>71</height>
       </rect>
      </property>
-     <property name="styleSheet">
-      <string notr="true">font: 75 14pt &quot;Arial Narrow&quot;;
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="1" column="1">
+       <widget class="QLabel" name="label_2">
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(135, 206, 235);</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QLabel" name="label_3">
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(180,255,159);</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2">
+       <widget class="QLabel" name="labelTempMin_2">
+        <property name="styleSheet">
+         <string notr="true">font: 75 14pt &quot;Arial Narrow&quot;;
 text-align: &quot;center&quot;;</string>
-     </property>
-     <property name="text">
-      <string>Temperatura minima</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="labelTempMax">
-     <property name="geometry">
-      <rect>
-       <x>730</x>
-       <y>185</y>
-       <width>151</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">font: 75 14pt &quot;Arial Narrow&quot;;
+        </property>
+        <property name="text">
+         <string>Temperatura normal</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="2">
+       <widget class="QLabel" name="labelTempMin_3">
+        <property name="styleSheet">
+         <string notr="true">font: 75 14pt &quot;Arial Narrow&quot;;
 text-align: &quot;center&quot;;</string>
-     </property>
-     <property name="text">
-      <string>Temperatura maxima</string>
-     </property>
+        </property>
+        <property name="text">
+         <string>Temperatura baja</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QLabel" name="label">
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(218,18,18);</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="2">
+       <widget class="QLabel" name="labelTempMin_4">
+        <property name="styleSheet">
+         <string notr="true">font: 75 14pt &quot;Arial Narrow&quot;;
+text-align: &quot;center&quot;;</string>
+        </property>
+        <property name="text">
+         <string>Temperatura alta</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
     <zorder>dataTable</zorder>
     <zorder>formLayoutWidget</zorder>
@@ -764,8 +805,7 @@ text-align: &quot;center&quot;;</string>
     <zorder>exportToExcelButton</zorder>
     <zorder>filterTableButton</zorder>
     <zorder>clearFilterButton</zorder>
-    <zorder>labelTempMin</zorder>
-    <zorder>labelTempMax</zorder>
+    <zorder>gridLayoutWidget_3</zorder>
    </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
