--- a/ui/main.ui
+++ b/ui/main.ui
@@ -29,7 +29,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Registros</string>
+   <string>Adeco Agro</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QFrame" name="background_frame">
@@ -94,6 +94,18 @@
      </property>
      <property name="sizeAdjustPolicy">
       <enum>QAbstractScrollArea::AdjustToContents</enum>
+     </property>
+     <property name="editTriggers">
+      <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
+     <property name="tabKeyNavigation">
+      <bool>false</bool>
+     </property>
+     <property name="showDropIndicator" stdset="0">
+      <bool>false</bool>
+     </property>
+     <property name="dragDropOverwriteMode">
+      <bool>false</bool>
      </property>
      <property name="sortingEnabled">
       <bool>true</bool>
@@ -716,9 +728,9 @@ background-color: rgb(255, 255, 255);</string>
      <property name="geometry">
       <rect>
        <x>1060</x>
-       <y>180</y>
+       <y>170</y>
        <width>181</width>
-       <height>71</height>
+       <height>83</height>
       </rect>
      </property>
      <layout class="QGridLayout" name="gridLayout">
